--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
   "dependencies": {
     "@expo/metro-runtime": "^3.1.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^20.1.0",
+    "@react-navigation/drawer": "^6.7.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
-    "expo": "^51.0.0",
+    "@react-navigation/stack": "^6.4.0",
+    "expo": "~51.0.20",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-reanimated": "3.10.0",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
+    "react-native": "^0.74.3",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-toast-notifications": "^3.4.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
