--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.3",
+    "react-native-elements": "^3.4.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-toast-message": "^2.2.0",
     "react-native-toast-notifications": "^3.4.0",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
